# imcodex

./: .env.example  .gitignore  .gitmessage  AGENTS.md  README.md  agentkit.yml  environment.yml  pyproject.toml  todo.md
docs/: README.md  channels.md  codex-native-capabilities.md  command-roadmap.md  debug-approval-stall.md  debug-harness.md  debug-restart-gap.md  dedicated-core-architecture.md  deployment.md  design.md  desktop-thread-replay-ordering.md  im-native-channel-spec.md  im-native-interaction-model.md  issue-notes.md  logging-observability.md  message-contract.md  native-app-server-architecture.md  native-redesign-plan.md  native-refactor-master-plan.md  native-thin-bridge-plan.md  next-step-development-plan.md  product-behavior-spec.md  restart-executor.md  rewrite-context-research.md  startup.md  system-constraints-spec.md  workflow.md
imcodex/: __init__.py
scripts/: agentkit  agentkit.cmd  doctor.ps1  start.cmd  start.command  start.ps1  start.sh
tests/: conftest.py  test_admin_api.py  test_admin_config_store.py  test_admin_native.py  test_agentkit_launcher.py  test_api.py  test_app_server_cli.py  test_application.py  test_appserver_client.py  test_appserver_schema_drift.py  test_appserver_stdio.py  test_appserver_supervisor.py  test_appserver_target.py  test_architecture.py  test_backend.py  test_bridge_layer.py  test_channel_artifacts.py  test_channel_feishu.py  test_channel_files.py  test_channel_foundations.py  test_channel_middleware.py  test_channel_outbound.py  test_channel_registry.py  test_channel_telegram.py  test_channel_weixin.py  test_channel_weixin_ilink.py  test_channels.py  test_channels_cli.py  test_channels_send.py  test_commands.py  test_composition.py  test_config.py  test_core_cli.py  test_debug_api.py  (+37 more)
(+122 files in other folders)
